# laser-monitor

./: .env.example  .gitignore  AGENTS.md  DETECTION_BOX_INTEGRATION_COMPLETE.md  DETECTION_OVERLAY_FIX.md  HOT_RELOAD_FEATURE.md  MERGE_RESOLUTION_COMPLETE.md  NOTIFICATION_SETTINGS_RESTORED.md  README.md  camera_manager.py  cli.py  example_brightness_config.py  flake.nix  image_uploader.py  laser_monitor.py  machine_history.json  optimization_results.json  optimize_brightness_thresholds.py  pyproject.toml  requirements.txt  run_all_tests.py  run_brightness_tests.py  setup_yoloe.py  test_brightness_detection.py  timelapse_capture.sh  visual_prompt_selector.py  web_ui.config.py
config/: config.py  test.config.py
docs/: yoloe-docs.md
images/: test.config.py
laser_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: README.md  VISUAL_OVERLAY.md  app.py  notification_settings.json  start_server.sh
server/templates/: dashboard.html
systemd/: README.md  install-services.sh  laser-monitor-server.service  laser-monitor.service  laser-monitor.target  manage-services.sh  start-laser-monitor.sh  start-server.sh
tests/: conftest.py  test.config.py  test1.config.py  test1.expected.json  test2.expected.json  test4.expected.json  test6.expected.json  test7.expected.json  test8.expected.json  test_brightness.config.py  test_detections.py
